--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
+config==0.5.1
+demjson==1.6
+gradio==3.4
 librosa==0.8.0
-matplotlib==3.3.1
-numpy==1.21.6
-phonemizer==2.2.1
+matplotlib==3.6.0
+numpy==1.23.3
+PyAudio==0.2.12
+pydub==0.25.1
+pyworld==0.3.0
 scipy==1.5.2
-torch
-torchvision
-Unidecode==1.1.1
-torchaudio
-pyworld
-Cython==0.29.32
-demjson
-pydub
-pyaudio
-wave
+sounddevice==0.4.5
+soundfile==0.11.0
+torch==1.12.1
+torchaudio==0.12.1
